[package]
name = "raft-json-server"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
axum = "0.5.17"
serde = { version = "1.0.147", features = ["derive"] }
tokio = { version = "1.23.1", features = ["full"] }
tracing = "0.1.37"
tracing-subscriber = "0.3.16"
